CssUpgrade, Lock, ReviewQuizz2.1
-> ~Implemented ReviewQuizz2.1
	-> ~Moved BusinessAnalyst
-> +Lock 2s exitQuizz button
-> +Dialogable:hover/focus bckgrndcolor
-> +Prevent cursor selection & img cursor

--- a/Quizz_Standalone/html/domaines/listeDomaineFinance.html
+++ b/Quizz_Standalone/html/domaines/listeDomaineFinance.html
@@ -34,9 +34,6 @@
  <body>
 	<div class="content">
 			<br/>
-			<div class="domaine left dialogable" name="businessanalyst">
-			 	Business Analyst
-			</div>
 			<div class="domaine right dialogable" name="modelisateur">
 			 	Modélisateur
 			</div>
@@ -46,7 +43,7 @@
 			<div class="domaine right dialogable" name="ingenieriefinanciere">
 				Ingénierie Financière
 			</div>
-			<div class="domaine middle dialogable" name="analysequantitative">
+			<div class="domaine left dialogable" name="analysequantitative">
 				Analyse Quantitative
 			</div>
 
