--- a/Quizz_Standalone/html/domaines/listeDomaineIT.html
+++ b/Quizz_Standalone/html/domaines/listeDomaineIT.html
@@ -41,9 +41,12 @@
 				IT
 				<br/>
 			</div>
-			<div class="domaine middle dialogable" name="innovation">
+			<div class="domaine left dialogable" name="innovation">
 				Innovation
 				<br/>
+			</div>
+			<div class="domaine right dialogable" name="businessanalyst">
+			 	Business Analyst
 			</div>
 <!-- 
 			<div class="domaine right dialogable" name="datascientist">
