--- a/Quizz_Standalone/html/listeInformationsSG.html
+++ b/Quizz_Standalone/html/listeInformationsSG.html
@@ -6,7 +6,6 @@
 	<script src = "js/listeDomaine.js"></script>
 	<script src="js/tools.js"></script>
 	<script src="/libs/qimessaging/2/qimessaging.js"></script>
-    <script src="js/timer.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/commun.css">
 	<link rel="stylesheet" type="text/css" href="css/listeDomaine.css">
  </head>
@@ -27,8 +26,8 @@
  </header>
  <body>
     <div class="content">
-		<div class="domaine left dialogable" name="quizzsg">
-			<div style="display:flex;justify-content:center;align-items:center;height:122px;">Quizz sur Société Générale</div>
+		<div class="domaine left dialogable" style="display:table;height:193px;" name="quizzsg">
+			<div style="display:table-cell;vertical-align:middle;">Quizz sur Société Générale</div>
 		</div>
 		<div class="domaine right dialogable" name="calculatrice">
 			Test : suis-je prêt(e) pour un entretien d'embauche ?
