--- a/Quizz_Standalone/html/quizzs/analyseQuantitative.html
+++ b/Quizz_Standalone/html/quizzs/analyseQuantitative.html
@@ -12,9 +12,9 @@
 	 </head>
 	 <title>Quizz Analyse Qantitative</title>
 	 <body data-nbquestions="4" data-metier="analyseQuantitative">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+		</div> -->
 		<img data-quizz="trading" class="sortieQuestionnaire"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Un quant passe l’essentiel de son temps à</p>
@@ -37,7 +37,7 @@
 				</br>
 				<div class="choixMultiple choix3">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="à Coder">
+					<div class="squaredImage" data-reponse="vrai" data-value="Un quante passe l’essentiel de son temps à coder">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Coder</span>
@@ -75,7 +75,7 @@
 				<br/>
 				<div class="choixMultiple choix3">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="en trèdeure">
+					<div class="squaredImage" data-reponse="vrai" data-value="Un bon quante réfléchit en trèdeure">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">En trader</span>
@@ -127,7 +127,6 @@
 					<span class="reponseMultiple">En surfant sur les forums</span>
 				</div>
 				<br/>
-				<img data-quizz="analyseQuantitative" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
 		</div>
@@ -166,7 +165,6 @@
 					</div>
 					<span class="reponseMultiple">Parce que le lemme de Girsanov fait disparaître le drift historique</span>
 				</div>
-				<img data-quizz="securite" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
 		</div>
