--- a/Quizz_Standalone/html/quizzs/dataScientist.html
+++ b/Quizz_Standalone/html/quizzs/dataScientist.html
@@ -12,12 +12,12 @@
 	 </head>
 	 <title>Quizz dataScientist</title>
 	 <body data-nbquestions="7" data-metier="dataScientist">
-	<div class="centered">
+<!-- 	<div class="centered">
 		<img id="selonVous" src="../images/entete.png"></img>
-	</div>
+	</div> -->
 		<img data-quizz="dataScientist" class="sortieQuestionnaire" redirection="domaines/listeDomaineData.html" dialog="listeDomaineData" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
-			<p class="question">Combien y a –t-il de data scientists au sein du pôle de Banque de Grande clientèle et Solutions investisseurs (GBIS) ?</p>
+			<p class="question">Combien y a –t-il de data scientist au sein du pôle de Banque d'investissement ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/cancel.png"></img>
@@ -36,21 +36,13 @@
 				</div>
 				</br>
 				<div class="choixMultiple choix3">
-					<img class="icon" src="../images/cancel.png"></img>
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">100</span>
-				</div>
-				</br>
-				<div class="choixMultiple choix4">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Nous employons 500 Data scientists">
+					<div class="squaredImage" data-reponse="vrai" data-value="La banque d'investissement emploie 500 Data saille en tiste">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">500</span>				</div>
 				</br>
-				<div class="choixMultiple choix5">
+				<div class="choixMultiple choix4">
 					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
@@ -63,7 +55,7 @@
 		
 		<div class="propositionVisible question2">
 		
-			<p class="question">Que fait un/une data scientist chez GBIS ?</p>
+			<p class="question">Que fait un/une data scientist ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
@@ -160,15 +152,15 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="De bonnes bases en statistiques et machine learning, ainsi qu'une bonne communication">
+					<div class="squaredImage" data-reponse="vrai" data-value="Les qualités requises pour être Data saille en tiste sont de bonnes bases en statistiques et en machine learning, ainsi qu'une bonne communication">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Des bases solides en statistique et machine learning</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
-					<img class="icon" src="../images/cancel.png"></img>
-					<div class="squaredImage" data-reponse="fausse">
+					<img class="icon" src="../images/checked.png"></img>
+					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Une expertise en deep learning</span>
@@ -267,7 +259,7 @@
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Python, le language, l'éléphant, un logo apprécié des outils de big data, la gazelle, mascotte d'Impala un èce q elle seurche angeaillene">
+					<div class="squaredImage" data-reponse="vrai" data-value="Python, le language, l'éléphant, un logo apprécié des outils de big data, la gazelle, mascotte d'Impala un èce q elle seurche anjaillene">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Un python</span>
