--- a/Quizz_Standalone/html/quizzs/dataScientistfinance.html
+++ b/Quizz_Standalone/html/quizzs/dataScientistfinance.html
@@ -14,8 +14,8 @@
 	    <a href="../listeDomainefinance.html">
 			<img data-quizz="dataScientist" class="sortieQuestionnaire" src="../images/out.png"></img>
 		</a>
-		<img id="selonVous" src="../images/entete.png"></img>
-		
+<!-- 		<img id="selonVous" src="../images/entete.png"></img>
+		 -->
 		<div class="propositionVisible question1">
 			<p class="question">Combien y a –t-il de data scientists au sein du pôle de Banque de Grande clientèle et Solutions investisseurs (GBIS) ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
@@ -221,7 +221,6 @@
 					<span class="reponseMultiple">La Forêt Amazonienne</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
-				<img data-quizz="dataScientist" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>		
 			</div>
 		</div>
