--- a/Quizz_Standalone/html/quizzs/ingenierieFinanciere.html
+++ b/Quizz_Standalone/html/quizzs/ingenierieFinanciere.html
@@ -12,9 +12,9 @@
 	 </head>
 	 <title>Quizz Ingénierie Financière</title>
 	 <body data-nbquestions="3" data-metier="ingenierieFinanciere">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+		</div> -->
 		<img data-quizz="trading" class="sortieQuestionnaire"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">A quelle taille correspond typiquement une transaction de couverture avec un client institutionnel ?</p>
@@ -37,7 +37,7 @@
 				</br>
 				<div class="choixMultiple choix3">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Plus de 200 millions d'euros">
+					<div class="squaredImage" data-reponse="vrai" data-value="Une transaction de couverture avec un client institutionnel correspond à plus de 200 millions d'euros">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple"> > 200M €</span>
@@ -48,7 +48,7 @@
 		</div>
 		
 		<div class="propositionVisible question2">
-			<p class="question">Quand a été créé le premier produit d'investissement avec capital protégé, distribué à la clientèle particulière française ?</p>
+			<p class="question">Quand a été créé le premier produit d'investissement avec capital protégé, distribué à la clientèle particulière française?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/cancel.png"></img>
@@ -60,7 +60,7 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="en 1992">
+					<div class="squaredImage" data-reponse="vrai" data-value="Le premier produit d'investissement avec capital protégé a été distribué en France en 1992">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">1992</span>
@@ -91,7 +91,7 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="En moyenne après 2 mois">
+					<div class="squaredImage" data-reponse="vrai" data-value="En moyenne après 2 mois un structureure junior SG peut traiter en direct des Opérations">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">2 mois</span>
@@ -105,8 +105,6 @@
 					<span class="reponseMultiple">2 ans</span>
 				</div>
 				<br/>
-				
-				<img data-quizz="ingenierieFinanciere" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
 		</div>
