--- a/Quizz_Standalone/html/quizzs/innovation.html
+++ b/Quizz_Standalone/html/quizzs/innovation.html
@@ -12,9 +12,9 @@
 	 </head>
 	 <title>Quizz Innovation</title>
 	 <body data-nbquestions="5">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+		</div> -->
 		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		
 		<div class="propositionVisible question1">
@@ -22,7 +22,7 @@
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Technologies nouvelles, moyens limités, création d’un besoin">
+					<div class="squaredImage" data-reponse="vrai" data-value="Les caractéristiques d'une innovation disruptive impliquent des  technologies nouvelles, des moyens limités, et des créations de nouveaux besoins">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Technologies nouvelles, moyens limités, création d’un besoin</span>
@@ -70,7 +70,7 @@
 				<br/>
 				<div class="choixMultiple choix3">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Accepter le changement, encourager l’échec et la prise de risque, apprendre de ses erreurs">
+					<div class="squaredImage" data-reponse="vrai" data-value="Les règles d'or pour innover sont d'accepter le changement, encourager l’échec et la prise de risque, tout en apprenant  de ses erreurs">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Accepter le changement, encourager l’échec et la prise de risque, apprendre de ses erreurs</span>
@@ -81,11 +81,11 @@
 		</div>
 		
 		<div class="propositionVisible question3">
-			<p class="question">A quels problèmes est confronté l'innovateur ?</p>
+			<p class="question">A quels problèmes est confronté un porteur d'idée en innovation ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Incompréhension et manque d’ouverture des interlocuteurs et Trouver un espace de travail">
+					<div class="squaredImage" data-reponse="vrai" data-value="Les porteurs d'idée sont confrontés à l'incompréhension, au manque d’ouverture des interlocuteurs et à trouver un espace de travail">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple" >Incompréhension et manque d’ouverture des interlocuteurs</span>
@@ -147,6 +147,7 @@
 			<p class="question">Quels outils méthodologique peuvent favoriser l’innovation ?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
+					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
@@ -155,7 +156,7 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Le lyne start-up et le design sinekineg" >
+					<div class="squaredImage" data-reponse="vrai" data-value="Le lyne start-up et le design sinekineg sont des outils favorisant l'innovation" >
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Le lean start-up et le design thinking</span>
