--- a/Quizz_Standalone/html/quizzs/modelisateur.html
+++ b/Quizz_Standalone/html/quizzs/modelisateur.html
@@ -12,16 +12,16 @@
 	 </head>
 	 <title>Quizz modélisateur</title>
 	 <body data-nbquestions="2" data-metier="modelisateur">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
 		</div>
-		<img data-quizz="modelisateur" class="sortieQuestionnaire"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
+ -->		<img data-quizz="modelisateur" class="sortieQuestionnaire"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Quel est le nombre de modèles traités dans l’équipe de modélisation des risques SG?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="80 modèles réglementaires et 200 modèles dans la banque">
+					<div class="squaredImage" data-reponse="vrai" data-value="280 dont 80 modèles réglementaires et 200 modèles dans la banque">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">280</span>
