--- a/Quizz_Standalone/html/quizzs/securite.html
+++ b/Quizz_Standalone/html/quizzs/securite.html
@@ -13,9 +13,9 @@
 	 </head>
 	 <title>Quizz sécurité</title>
 	 <body data-nbquestions="4" data-metier="securite">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+		</div> -->
 		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Qu'est ce qu'une "APT" ?</p>
@@ -134,7 +134,7 @@
 		
 		
 		<div class="propositionVisible question4">
-			<p class="question">Combien d'équipements (serveurs, équipements réseau) sont analysés automatiquement chaque mois à la recherche de vulnérabilités ?</p>
+			<p class="question">Par mois, combien d'équipements réseau sont analysés automatiquement à la recherche de vulnérabilités ?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/cancel.png"></img>
