--- a/Quizz_Standalone/html/quizzs/soge.html
+++ b/Quizz_Standalone/html/quizzs/soge.html
@@ -12,9 +12,9 @@
 	 </head>
 	 <title>Quizz Société Générale</title>
 	 <body data-nbquestions="7" data-metier="sogé">
- 		<div class="centered">
+<!--  		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+		</div> -->
 		<img data-quizz="sogé" class="sortieQuestionnaire" redirection="listeInformationsSG.html" dialog="listeInformation" src="../images/out.png"></img>
 
 		<div class="propositionVisible question1">
@@ -54,7 +54,7 @@
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="4 millions de fois">
+					<div class="squaredImage" data-reponse="vrai" data-value="L’application Société Générale a été téléchargé 4 millions de fois">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">4 millions de fois</span>
@@ -101,7 +101,7 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Liberté Living Lab">
+					<div class="squaredImage" data-reponse="vrai" data-value="Liberté Living Lab est l’incubateur d’innovation avec lequel nous somme partenaires">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Liberté Living Lab</span>
@@ -133,7 +133,7 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="24%">
+					<div class="squaredImage" data-reponse="vrai" data-value="24% de nos collaborateurs ont moins de 30 ans">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">24%</span>
@@ -180,7 +180,7 @@
 				<br/>
 				<div class="choixMultiple choix3">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="43%">
+					<div class="squaredImage" data-reponse="vrai" data-value="On compte 43% de femmes parmi les managers du groupe">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">43%</span>
@@ -202,7 +202,7 @@
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="30 minutes">
+					<div class="squaredImage" data-reponse="vrai" data-value="30 minutes sont nécessaires pour répondre sur Twitter">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">30 minutes</span>
@@ -240,7 +240,7 @@
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="60%">
+					<div class="squaredImage" data-reponse="vrai" data-value="60% de nos collaborateurs travail à l’étranger">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">60%</span>
