--- a/Quizz_Standalone/html/quizzs/businessAnalyst.html
+++ b/Quizz_Standalone/html/quizzs/businessAnalyst.html
@@ -9,12 +9,12 @@
 		<link rel="stylesheet" type="text/css" href="../css/commun.css">
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
 	 </head>
-	 <title>Quizz IT</title>
+	 <title>Quizz Business Analyst</title>
 	 <body data-nbquestions="4" data-metier="it">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
-		<img data-quizz="it" class="sortieQuestionnaire" redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
+		</div> -->
+		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Quel est le rôle du Business Analyst dans un projet ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
@@ -100,7 +100,7 @@
 				<br/>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Le « Product Owner » est toujours disponible, représente le client auprès de l’équipe, fait partager la vision du produit à réaliser, établit les fonctionnalités et les priorise, rédige les spécifications du projet, participe ou anime les démonstrations et réunions d’avancement et accepte ou refuse le travail réalisé">
+					<div class="squaredImage" data-reponse="vrai" data-value="Le Producte owneure représente le client auprès de l’équipe, et  partage la vision du produit à réaliser">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Partage la vision du produit à réaliser, élabore les fonctionnalités à réaliser</span>
@@ -149,6 +149,6 @@
 		</div>
 		
 		<span id="next"></span>
-			<img id="out" redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/logout.png"></img>
+			<img id="out" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
 	 </body>
  </html>
