--- a/Quizz_Standalone/html/quizzs/it.html
+++ b/Quizz_Standalone/html/quizzs/it.html
@@ -10,10 +10,10 @@
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
 	 </head>
 	 <title>Quizz IT</title>
-	 <body data-nbquestions="4" data-metier="it">
-		<div class="centered">
-			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+	 <body data-nbquestions="4" data-metier="it"> 
+<!-- 		<div class="headerQuizz">
+			<img class="headerQuizzIcon" src="../images/header.png"></img>
+		</div> -->
 		<img data-quizz="it" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Sur un total de 10, combien de logiciels utilisés par un trader sont entièrement développés en interne ?</p>
@@ -23,7 +23,7 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">4</span>
+					<span class="reponseMultiple">0</span>
 				</div>
 				</br>
 				<div class="choixMultiple choix2">
@@ -39,7 +39,7 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">9</span>
+					<span class="reponseMultiple">5</span>
 				</div>
 				</br>
 				<div class="choixMultiple choix4">
@@ -49,28 +49,19 @@
 					</div>
 					<span class="reponseMultiple">7</span>
 				</div>
-				</br>
-				<div class="choixMultiple choix5">
-					<img class="icon" src="../images/cancel.png"></img>
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">0</span>
-				</div>
                 <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
-		
 		
 		<div class="propositionVisible question2">
 			<p class="question">Quels sont les langages utilisés pour développer les logiciels de Trading de Société générale ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Nous codons en C#, Java et C++">
+					<div class="squaredImage" data-reponse="vrai" data-value="Nous codons en C sharpe, Java et C plusse plusse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">C#</span>
+					<span class="reponseMultiple">C#, Java, et C++</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
@@ -78,7 +69,7 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Cobol</span>
+					<span class="reponseMultiple">Cobol, Pascal</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
@@ -86,23 +77,15 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Pascal</span>
+					<span class="reponseMultiple">C#, Java, et Cobol</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
-					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai">
+					<img class="icon" src="../images/cancel.png"></img>
+					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Java</span>
-				</div>
-				<br/>
-				<div class="choixMultiple choix5">
-					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">C++</span>
+					<span class="reponseMultiple">C++, Java et Cobol</span>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
@@ -117,7 +100,7 @@
 					<div class="squaredImage" data-reponse="vrai" data-value="Tous ces outils sont utilisés !">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">TeamCity</span>
+					<span class="reponseMultiple">TeamCity,  Puppet, AWS</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
@@ -125,7 +108,7 @@
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Docker</span>
+					<span class="reponseMultiple">Nexus, Cucumber</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
@@ -133,7 +116,7 @@
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Puppet</span>
+					<span class="reponseMultiple">Git</span>
 				</div>
 				<br/>
 				<div class="choixMultiple choix4">
@@ -141,31 +124,7 @@
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">AWS</span>
-				</div>
-				<br/>
-				<div class="choixMultiple choix5">
-					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">Nexus</span>
-				</div>
-				<br/>
-				<div class="choixMultiple choix6">
-					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">GIT</span>
-				</div>
-				<br/>
-				<div class="choixMultiple choix7">
-					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">Cucumber</span>
+					<span class="reponseMultiple">Docker</span>
 				</div>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
@@ -173,7 +132,7 @@
 		
 		<div class="propositionVisible question4">
 		
-			<p class="question">Combien de messages par secondes les logiciels de Trading sur obligation peuvent gérer à la Banque d'investissement ?</p>
+			<p class="question">Combien de messages par secondes peuvent gérer les logiciels de Trading sur obligation?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
 					<img class="icon" src="../images/cancel.png"></img>
@@ -192,22 +151,14 @@
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
-					<img class="icon" src="../images/cancel.png"></img>
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">280 000</span>
-				</div>
-				<br/>
-				<div class="choixMultiple choix4">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="350000 messages">
+					<div class="squaredImage" data-reponse="vrai" data-value="350000 messages par seconde sont gérés par les logiciels de trèdine sur obligation">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">350 000</span>
 				</div>
 				<br/>
-				<div class="choixMultiple choix5">
+				<div class="choixMultiple choix4">
 					<img class="icon" src="../images/cancel.png"></img>
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
