--- a/Quizz_Standalone/html/quizzs/trading.html
+++ b/Quizz_Standalone/html/quizzs/trading.html
@@ -12,9 +12,9 @@
 	 </head>
 	 <title>Quizz Trading</title>
 	 <body data-nbquestions="3" data-metier="trading">
-		<div class="centered">
+<!-- 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
-		</div>
+		</div> -->
 		<img data-quizz="trading" class="sortieQuestionnaire"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Est-ce qu'un trader taux rencontre des clients ?</p>
@@ -29,7 +29,7 @@
 				</br>
 				<div class="choixMultiple choix2">
 					<img class="icon" src="../images/checked.png"></img>
-					<div class="squaredImage" data-reponse="vrai" data-value="Toujours accompagné">
+					<div class="squaredImage" data-reponse="vrai" data-value="Un trèdeure est toujours accompagné des vendeurs lors des rencontres clients">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Oui, mais accompagné de vendeurs</span>
@@ -105,8 +105,6 @@
 					<span class="reponseMultiple">2015</span>
 				</div>
 				<br/>
-				
-				<img data-quizz="trading" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
 			</div>
 		</div>
